--- a/data_parse.ipynb
+++ b/data_parse.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counts 1 and 2: 1 day Imprisonment; $500.00 Fine; $20.00 Special Assessment.\n"
+      "18:1711 MISAPPROPRIATION OF POSTAL FUNDS(1)\n",
+      "['$2000.00']\n"
      ]
     }
    ],
@@ -18,26 +19,31 @@
     "import sys\n",
     "import os\n",
     "\n",
+    "alcohol = []\n",
+    "\n",
     "if os.name == 'nt':\n",
     "    try:\n",
     "        here = sys.path[0]\n",
-    "        p = here + \"\\\\data\\\\US.AK\\\\closed\\\\5GN2-XGG1-DXDT-G4MK-00000-00.json\"\n",
+    "        p = here + \"\\\\data\\\\US.AK\\\\closed\\\\7WBN-MWM0-Y892-B2M2-00000-00.json\"\n",
     "        with open(p) as data_file:\n",
     "            data = json.load(data_file)\n",
     "        try:\n",
     "#             print(data[\"parties\"])\n",
-    "            d = data[\"parties\"][0][\"charges\"][1]['charge_disposition']\n",
-    "            d.split()\n",
-    "            print(d)\n",
-    "#             for i in data[\"parties\"][0][\"charges\"]:\n",
-    "#                 print(i)\n",
-    "#                 for j in i:\n",
-    "#                     print(j)\n",
-    "#                     if j[\"charge_disposition\"]:\n",
-    "#                         print(j[\"charge_disposition\"][0])\n",
-    "#                     print(i)\n",
-    "#                     a = i[\"charges\"][1]\n",
-    "#                     print(a[charge_disposition])\n",
+    "            charge_desc = data[\"parties\"][0][\"charges\"][0]['charge_description']\n",
+    "            print(charge_desc)\n",
+    "            d = data[\"parties\"][0][\"charges\"][1]['charge_disposition'].split(\"; \")\n",
+    "#             d = \n",
+    "            for i in d:\n",
+    "                splitt = i.split(\" \")\n",
+    "                if 'Fine' in splitt:\n",
+    "#                     print(splitt)\n",
+    "                    temp = 0\n",
+    "                    for z in splitt:\n",
+    "                        if z[0] is \"$\":\n",
+    "                                alcohol.append(splitt[temp])\n",
+    "                        temp += 1\n",
+    "            print(alcohol)\n",
+    "            \n",
     "                \n",
     "        except TypeError:\n",
     "            print(\"Error\")\n",
