--- a/data_parse.ipynb
+++ b/data_parse.ipynb
@@ -2,73 +2,194 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18:1711 MISAPPROPRIATION OF POSTAL FUNDS(1)\n",
-      "['$2000.00']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import sys\n",
     "import os\n",
     "\n",
-    "alcohol = []\n",
+    "def extract_desposition_charges(filename):\n",
+    "    alcohol = []\n",
     "\n",
-    "if os.name == 'nt':\n",
-    "    try:\n",
-    "        here = sys.path[0]\n",
-    "        p = here + \"\\\\data\\\\US.AK\\\\closed\\\\7WBN-MWM0-Y892-B2M2-00000-00.json\"\n",
-    "        with open(p) as data_file:\n",
-    "            data = json.load(data_file)\n",
+    "    if os.name == 'nt':\n",
     "        try:\n",
-    "#             print(data[\"parties\"])\n",
-    "            charge_desc = data[\"parties\"][0][\"charges\"][0]['charge_description']\n",
-    "            print(charge_desc)\n",
-    "            d = data[\"parties\"][0][\"charges\"][1]['charge_disposition'].split(\"; \")\n",
-    "#             d = \n",
-    "            for i in d:\n",
-    "                splitt = i.split(\" \")\n",
-    "                if 'Fine' in splitt:\n",
-    "#                     print(splitt)\n",
-    "                    temp = 0\n",
-    "                    for z in splitt:\n",
-    "                        if z[0] is \"$\":\n",
-    "                                alcohol.append(splitt[temp])\n",
-    "                        temp += 1\n",
-    "            print(alcohol)\n",
+    "#             here = sys.path[0]\n",
+    "#             p = here + \"\\\\data\\\\US.AK\\\\closed\\\\7WBN-MWM0-Y892-B2M2-00000-00.json\"\n",
+    "            with open(filename) as data_file:\n",
+    "                data = json.load(data_file)\n",
+    "            try:\n",
+    "    #             print(data[\"parties\"])\n",
+    "                charge_desc = data[\"parties\"][0][\"charges\"][0]['charge_description']\n",
+    "                print(charge_desc)\n",
+    "                d = data[\"parties\"][0][\"charges\"][1]['charge_disposition'].split(\"; \")\n",
+    "    #             d = \n",
+    "                for i in d:\n",
+    "                    splitt = i.split(\" \")\n",
+    "                    if 'Fine' in splitt:\n",
+    "    #                     print(splitt)\n",
+    "                        temp = 0\n",
+    "                        for z in splitt:\n",
+    "                            if z[0] is \"$\":\n",
+    "                                    alcohol.append(splitt[temp])\n",
+    "                            temp += 1\n",
+    "                print(alcohol)\n",
+    "\n",
+    "\n",
+    "            except TypeError:\n",
+    "                pass\n",
+    "            except KeyError:\n",
+    "                pass\n",
     "            \n",
-    "                \n",
-    "        except TypeError:\n",
-    "            print(\"Error\")\n",
-    "        \n",
-    "    except FileNotFoundError:\n",
-    "        print('File Not Found Error')\n",
-    "else :\n",
-    "    print(\"Error\")"
+    "\n",
+    "        except FileNotFoundError:\n",
+    "            print('File Not Found Error')\n",
+    "    else :\n",
+    "        print(\"Error\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print charge_description"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G:\\LexisNexis\\LexisNexis-4\n"
+      "94\n",
+      "47:223(a)(1)(D) HARASSING INTERSTATE TELEPHONE CALLS\n",
+      "[]\n",
+      "18:922(g)(1) and 924(a)(2) FELON IN POSSESSION OF FIREARMS(1)\n",
+      "[]\n",
+      "21:846 and 841(a)(1) &; (b)(1)(C) DRUG CONSPIRACY(1)\n",
+      "[]\n",
+      "18:922(a)(6) FALSE STATEMENT IN ACQUISITION OF FIREARM(1)\n",
+      "[]\n",
+      "18:922(g)(1) and 924(a)(2) FELON IN POSSESSION OF FIREARMS(1)\n",
+      "[]\n",
+      "21:841(a)(1) AND (b)(1)(C) ATTEMPTED POSSESSION WITH INTENT TO DISTRIBUTE CONTROLLED SUBSTANCES, NAMELY, HEROIN AND METHAMPHETAMINE\n",
+      "36 C.F.R. 2.35(c) UNDER THE INFLUENCE OF ALCOHOL OR CONTROLLED SUBSTANCE IN NATIONAL PARK(1)\n",
+      "['$500.00']\n",
+      "21:841(a)(1) DISTRIBUTION OF HEROIN(2)\n",
+      "[]\n",
+      "18:922(a)(5) IMPORTING/MANUFACTURING FIREARMS(4)\n",
+      "[]\n",
+      "21:841(a)(1), (b)(1)(A) ATTEMPTED POSSESSION OF A CONTROLLED SUBSTANCE WITH INTENT TO DISTRIBUTE(1)\n",
+      "[]\n",
+      "18:1711 MISAPPROPRIATION OF POSTAL FUNDS(1)\n",
+      "['$2000.00']\n",
+      "18:2252A(a)(5)(B) POSSESSION CHILD PORNOGRAPHY\n",
+      "18:1470 TRANSFER OF OBSCENE MATERIALS TO MINORS(2s)\n",
+      "[]\n",
+      "18:1791(a)(2) &; (b)(4): CONTRABAND IN PRISON - PHONE OR OTHER DEVICE(1)\n",
+      "[]\n",
+      "21:841(a)(1) CONTROLLED SUBSTANCE - SELL, DISTRIBUTE, OR DISPENSE. Forfeiture Allegations.(1)\n",
+      "18:641 THEFT OF U. S. PROPERTY - NMT $100,000; NMT 1Y; B; NMT 1Y SUP REL; $25 SA(1)\n",
+      "[]\n",
+      "18:922(g)(8): UNLAWFUL TRANSPORT OF FIREARMS, ETC./FORFEITURE ALLEGATION(1)\n",
+      "[]\n",
+      "18:2252A(a)(5)(B) ACTIVITIES RE MATERIAL CONSTITUTING/CONTAINING CHILD PORNO(1)\n",
+      "[]\n",
+      "21:841(a)(1) and (b)(1)(C)-CONTROLLED SUBSTANCE - SELL, DISTRIBUTE, OR DISPENSE; A quantity of methamphetamine(1)\n",
+      "[]\n",
+      "18:1030(a)(4)FRAUD ACTIVITY CONNECTED WITH COMPUTERS(1)\n",
+      "[]\n",
+      "18:242 DEPRIVE CIVIL RIGHTS(1)\n",
+      "[]\n",
+      "21:331(k),333(a)1 AFFECTING THE LABEL TO CAUSE MISBRANDING(1)\n",
+      "['$5000.000']\n",
+      "21:846, 841(a)(1), and 841(b)(1)(A) CONSPIRACY TO DISTRIBUTE CONTROLLED SUBSTANCE- 50 grams or more of methamphetamine(1)\n",
+      "[]\n",
+      "18:2250(a)-FAILURE TO REGISTER AS A SEX OFFENDER(1)\n",
+      "[]\n",
+      "18:2250(a) FAILURE TO REGISTER AS A SEX OFFENDER(1)\n",
+      "[]\n",
+      "18:2251A.F\n",
+      "18:1951(a)INTERFERENCE WITH COMMERCE BY THREAT OR VIOLENCE(1)\n",
+      "21:841(a)(1)and(b)(1)(A)CONTROLLED SUBSTANCE - POSSESSION; 50 grams or more of methamphetamine(1)\n",
+      "[]\n",
+      "18:641 PUBLIC MONEY, PROPERTY OR RECORDS(1)\n",
+      "[]\n",
+      "THEFT OR RECEIPT OF STOLEN MAIL MATTER (1)\n",
+      "FRAUDS AND SWINDLES(1)\n",
+      "[]\n",
+      "8:1326(a) Illegal Re-Entry(1)\n",
+      "[]\n",
+      "18:922(g)(1) Felon in Possession of Firearm(2)\n",
+      "[]\n",
+      "21:841(a)(1) Possess with Intent to Distribute Methamphetamine(3)\n",
+      "[]\n",
+      "18:1791(a)(2) and 18:1791(d)(1)(B) Possession of Contraband in Prison(1)\n",
+      "[]\n",
+      "8:1326(a) Re-Entry After Deportation(1)\n",
+      "[]\n",
+      "21:841(a)(1) and (b)(1)(A)(viii) Distribution of More than 50 Grams of Cocaine Base(1)\n",
+      "21:841(a)(1) and 21:841(b)(1)(A) Possession with Intent to Distribute Methamphetamine(1)\n",
+      "[]\n",
+      "18:1341 and 18:3237 Mail Fraud(1)\n",
+      "[]\n",
+      "18:1708 Theft of Mail(1)\n",
+      "[]\n",
+      "18:922(g)(1) Felon in Possession of a Firearm(1)\n",
+      "[]\n",
+      "21:841(a)(1) and 21:841(b)(1)(C) Possession with Intent to Distribute Cocaine Base and Cocaine(3)\n",
+      "[]\n",
+      "18:1791(a)(2) Possession of Prohibited Object in Prison - Cell Phone(1)\n",
+      "[]\n",
+      "21:841(a)(1) and 21:841(b)(1)(C) Possession with Intent to Distribute Heroin(4)\n",
+      "8:1324.F CONSP. IN BRINGING IN AND HARBORING ALIENS NMT 10 yrs; NMT $250,000; +3 yrs. S.R.(1)\n",
+      "[]\n",
+      "FARRIS EUGENE CONEY\n",
+      "18:1546(b)(3) Visa Fraud(1)\n",
+      "[]\n",
+      "complaint filed\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-a49168102f75>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m#         print()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mnew_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"data\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfile2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m         \u001b[0mextract_desposition_charges\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;31m#         with open(os.path.join(\"data\", str(i), file2[0], j)) as f:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;31m#             print(f)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-b01582962feb>\u001b[0m in \u001b[0;36mextract_desposition_charges\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m     16\u001b[0m                 \u001b[0mcharge_desc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"parties\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"charges\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'charge_description'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcharge_desc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m                 \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"parties\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"charges\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'charge_disposition'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"; \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m     \u001b[1;31m#             d =\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "print(sys.path[0])"
+    "# os.listdir()\n",
+    "\n",
+    "files = sorted(os.listdir(\"data\"))   \n",
+    "# print(files)\n",
+    "# print(len(files))\n",
+    "\n",
+    "for i in files:\n",
+    "#     print(i)\n",
+    "    file2 = os.listdir(os.path.join(\"data\", str(i)))\n",
+    "\n",
+    "    file3 = os.listdir(os.path.join(\"data\", str(i), file2[0]))\n",
+    "#     print(file2)\n",
+    "    for j in file3:\n",
+    "#         print()\n",
+    "        new_path = os.path.join(\"data\", str(i), file2[0], j)\n",
+    "        extract_desposition_charges(new_path)\n",
+    "#         with open(os.path.join(\"data\", str(i), file2[0], j)) as f:\n",
+    "#             print(f)\n",
+    "    \n",
+    "print(len(file3))\n",
+    "    \n",
+    "# print(file3)"
    ]
   }
  ],
