--- a/keyword_extraction.ipynb
+++ b/keyword_extraction.ipynb
@@ -2,19 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4.0, 'postal funds'),\n",
-       " (4.0, '1711 misappropriation'),\n",
-       " (1.0, '18'),\n",
+       "[(4.0, 'national park'),\n",
+       " (4.0, 'controlled substance'),\n",
+       " (3.5, '36 c'),\n",
+       " (1.5, 'c'),\n",
+       " (1.0, 'r'),\n",
+       " (1.0, 'influence'),\n",
+       " (1.0, 'f'),\n",
+       " (1.0, 'alcohol'),\n",
+       " (1.0, '35'),\n",
+       " (1.0, '2'),\n",
        " (1.0, '1')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +31,7 @@
     "r = Rake()\n",
     "r = Rake()\n",
     "\n",
-    "text = \"18:1711 MISAPPROPRIATION OF POSTAL FUNDS(1)\"\n",
+    "text = \"36 C.F.R. 2.35(c) UNDER THE INFLUENCE OF ALCOHOL OR CONTROLLED SUBSTANCE IN NATIONAL PARK(1)\"\n",
     "# Extraction given the text.\n",
     "r.extract_keywords_from_text(text)\n",
     "\n",
