Update: Add indent

--- a/data_parse.ipynb
+++ b/data_parse.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -107,9 +107,9 @@
     "            num[key].append(ans[1])\n",
     "            \n",
     "print(num)           \n",
-    "#     with open(\"ouput\", \"w\") as f:\n",
-    "#             json.dump(num, f)\n",
-    "#             f.dump(',')"
+    "with open(\"output.json\", \"w\") as f:\n",
+    "        json.dump(num, f, indent=4)\n",
+    "        f.write(',')"
    ]
   },
   {
